feat: Exe task can build custom JRE.